--- a/MangoTest/MainPage.xaml
+++ b/MangoTest/MainPage.xaml
@@ -5,9 +5,15 @@
     xmlns:local="using:MangoTest"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    SizeChanged="Page_SizeChanged">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="Transparent"
+          Name="rootGrid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="200"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal"
                     HorizontalAlignment="Center">
             <StackPanel.Resources>
@@ -26,5 +32,16 @@
                 Click="RestartTimerButton_Click"
                 Content="Restart"/>
         </StackPanel>
+
+        <Button Grid.Row="1"
+                Content="Bonjour"
+                HorizontalAlignment="Center"
+                Margin="0,100,0,0"/>
+        <Grid Background="Transparent"
+              Name="hah"
+              Grid.Row="1">
+            <Button Content="Hello"
+                    HorizontalAlignment="Center"/>
+        </Grid>
     </Grid>
 </Page>
